# shortestpaper

./: Cargo.toml  package-lock.json  package.json
pkg/: fifth.d.ts  fifth.js  fifth_bg.wasm.d.ts
pkg-parallel/: fifth.d.ts  fifth.js  fifth_bg.wasm.d.ts
src/: lib.rs
website/: index.js  wasm-worker.js
