cargo-features = ["edition2021"]

[package]
name = "fifth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
time = "*"
rayon = { version = "*", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true }
wasm-bindgen = "*"

[features]
parallel = ["rayon", "wasm-bindgen-rayon"]
